[package]
name = "struct_array"
version = "0.2.1"
authors = ["Jim Turner <rust@turner.link>"]
description = "Procedural macros for structs to be converted easily to/from arrays and slices."
repository = "https://github.com/jturner314/struct_array"
readme = "README.md"
keywords = ["struct", "array", "slice"]
license = "MIT"

[dependencies]
syn = "0.11"
quote = "0.3"

[lib]
proc-macro = true
